Fix overflowing text on mobile menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -662,12 +662,11 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .closed {
-        width: 0;
-        padding: 0
+        right: 0;
     }
 
     .open {
-        width: 45vw;
+        right: 45vw;
     }
 
     /*HERO SECTION STYLES FOR XS*/ 
@@ -846,12 +845,11 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .closed {
-        width: 0;
-        padding: 0
+        right: 0;
     }
 
     .open {
-        width: 45vw;
+        right: 45vw;
     }
 
     /*HERO SECTION STYLES FOR M*/ 
@@ -1030,12 +1028,11 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .closed {
-        width: 0;
-        padding: 0
+        right: 0;
     }
 
     .open {
-        width: 45vw;
+        right: 45vw;
     }
 
     /*HERO SECTION STYLES FOR XS*/ 
@@ -1215,12 +1212,11 @@ Since we work from the desktop down (desktop-first design) we need to order the 
     }
 
     .closed {
-        width: 0;
-        padding: 0;
+        right: -45vw;
     }
 
     .open {
-        width: 45vw;
+        right: 0vw;
     }
 
     /*HERO SECTION STYLES FOR XS*/ 
